# AutonomousSocailMediaContentStudio

./: .env_copy  README.md  demo_presentation_v2.pptx  generate_ppt.py  pyproject.toml  ~$demo_presentation_v2.pptx
app/: main.py
app/core/: llm.py  logger.py
app/graph/: graph.py  routing.py
app/models/: models.py
app/nodes/: act.py  check.py  format.py  plan.py  reflect.py  replan.py
app/prompts/: act_prompts.py  check_prompts.py  format_prompts.py  plan_prompts.py  replan_prompts.py
app/state/: state.py
app/tools/: __init__.py  character_counter.py  content_guidelines_checker.py  read_file_tool.py  read_url_tool.py  web_search.py
uploads/: sampleUrl.txt
