[project]
name = "autonomoussocailmediacontentstudio"
version = "0.1.0"
description = "Autonomous Social Media Content Studio: Multi-Agent Publishing System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "duckduckgo-search>=8.1.1",
]
